# dreck

./: Cargo.toml  README.md  empty.rs
src/: arena.rs  cell.rs  impl_trait.rs  lib.rs  marker.rs  ptr.rs  root.rs  trace.rs
src/scoped/: mod.rs
src/sys/: arena.rs  mod.rs  ptr.rs
tests/: basic.rs  compile.rs  compile_pass.rs  covariant.rs  covariant_container.rs  function.rs
tests/compile_fail/: hold_borrow_to_long.rs  hold_borrow_to_long.stderr  hold_borrow_to_long_mut.rs  hold_borrow_to_long_mut.stderr  move_out_rooted.rs  move_out_rooted.stderr  moving_cell_owner.rs  moving_cell_owner.stderr  outside_lifetime.rs  outside_lifetime.stderr  rebind_other_root.rs  rebind_other_root.stderr  rebind_other_root_contained.rs  rebind_other_root_contained.stderr  root_other_root.rs  root_other_root.stderr  same_owner.rs  same_owner.stderr  same_root.rs  same_root.stderr  use_root_mutably_while_bound.rs  use_root_mutably_while_bound.stderr  wrong_realm_add.rs  wrong_realm_add.stderr  wrong_realm_rebind.rs  wrong_realm_rebind.stderr  wrong_realm_root.rs  wrong_realm_root.stderr
tests/compile_pass/: variance.rs  variance_container.rs
