[package]
name = "dreck"
version = "0.1.0"
edition = "2021"
authors = ["Mees Delzenne <mees.delzenne@gmail.com>"]
license = "MIT"
description = "A safe tracing garbage collection library with minimal safety bookkeeping"
keywords = ["garbage", "memory"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
criterion = "0.3.6"
trybuild = "1.0.63"

[[bench]]
name = "random_graph"
harness = false
